# keycloak-client.rs

./: .Mk.yaml  Cargo.toml  README.md
codegen/: Cargo.toml
codegen/src/: main.rs  openapi_util.rs  schema_utils.rs
codegen3/: Cargo.toml
codegen3/src/: load.rs  main.rs  patches.rs
keycloak-client/: Cargo.toml
keycloak-client/src/: client.rs  error.rs  lib.rs  response.rs
keycloak-pathgen/: Cargo.toml
keycloak-types/: Cargo.toml
keycloak-types/src/: lib.rs  schema_gen.rs
keycloak-types2/: Cargo.toml
keycloak-types2/src/: k8s.rs  lib.rs  schema_gen.rs
