[package]
name = "codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo_toml = "0.22.1"
case_style = "0.2.1"
clap = { version = "4.5.34", features = ["derive"] }
prettyplease = "0.2.31"
proc-macro2 = "1.0.94"
quote = "1.0.40"
reqwest = { version = "0.12.15", features = ["blocking"] }
schemars = "0.8.22"
serde_json = "1.0.140"
serde_toml = "0.0.1"
syn = "2.0.100"
typify = "0.3.0"
