[package]
name = "codegen"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
cargo_toml = "0.22.3"
case_style = "0.2.1"
clap = { version = "4.5.49", features = ["derive"] }
prettyplease = "0.2.37"
proc-macro2 = "1.0.101"
quote = "1.0.41"
reqwest = { version = "0.12.24", features = ["blocking"] }
schemars = "0.8.22"
serde_json = "1.0.145"
serde_toml = "0.0.1"
syn = "2.0.107"
typify = "0.5.0"
