[package]
name = "codegen3"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
schemars = "0.8"
serde_json = "1"
syn = { version = "2.0", features = ["full", "visit-mut"] }
typify = "0.6.1"
