[package]
name = "keycloak-client"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
derive_builder = "0.20.2"
log = "0.4.26"
oauth2 = "5.0.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.218"
serde_json = "1.0.139"
thiserror = "2.0.11"
keycloak-types = { path = "../keycloak-types" }
