[package]
name = "keycloak-client"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
chrono = "0.4.40"
derive_builder = "0.20.2"
log = "0.4.27"
oauth2 = "5.0.0"
reqwest = { version = "0.12.15", features = ["h2", "http2", "rustls-tls", "json"], default-features = false }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
keycloak-types = { path = "../keycloak-types" }
